Z-index reorganization (fix #55)

--- a/src/public/css/app.less
+++ b/src/public/css/app.less
@@ -658,7 +658,7 @@ body {
 #geocode_widget {
 
 	position: fixed;
-	z-index: @geocodeWidgetZIndex;
+	z-index: @geocodeZIndex;
 	top: @titleHeight + (@toolbarBtnSize * 2) + 9;
 	left: 0;
 	padding-left: @toolbarBtnSize;
